src/objects/Apttus_Config2__OrderFulfillment__c.object
<CustomObject>
    <description>Represents an order fulfillment associated with an account</description>
    <fields>
        <fullName>APTS_Order_Fulfillment_Header_SAP_ID__c</fullName>
        <description>This is the SAP Sales Order Number.</description>
        <externalId>true</externalId>
        <label>Order Fulfillment Header SAP ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated account</description>
        <inlineHelpText>ID of the associated account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Fulfillments</relationshipLabel>
        <relationshipName>OrderFulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FulfilledDate__c</fullName>
        <description>The date of the order fulfillment.</description>
        <inlineHelpText>The date of the order fulfillment.</inlineHelpText>
        <label>Fulfilled Date</label>
        <type>Date</type>
    </fields>
    <label>Order Fulfillment</label>
    <listViews>
        <fullName>All_Order_Fulfillments</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Config2__AccountId__c</columns>
        <columns>Apttus_Config2__FulfilledDate__c</columns>
        <columns>APTS_Order_Fulfillment_Header_SAP_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Order Fulfillments</label>
    </listViews>
    <nameField>
        <displayFormat>F-{00000000}</displayFormat>
        <label>Fulfillment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Fulfillments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>